# BrownieAtelierNewsCrawler

./: .devcontainer  .dockerignore  .gitignore  BrownieAtelierアプリ概要.xlsx  Pipfile  README.md  docker-compose.yml  docker-compose__app-container.yml  docker-compose__app-image-build.yml  docker-compose__app_container.yml  docker-compose__base-image-build.yml  docker-compose__mongo-db-container.yml  docker-compose__news-crawler-container.yml  docker-compose__news-crawler-image-build.yml  dockerfile  dockerfile_app  dockerfile_base  dockerfile_update  logging.yml  prefect.yaml  pyproject.toml  requirements.txt  test.srctrlprj
.github/workflows/: brownie_atelier_deploy.yml  brownie_atelier_image_bulid.yml  docker_image_kakunin.yml  docker_image_kakunin2.yml  docker_image_kakunin3.yml  main.yml  mongo-container-up.yml  moto.yml  prefect_flow_test.yml  saki.yml
app/: Pipfile  local.py  requirements.txt
app/GUI/: log_viewer.py  log_viewer_validator.py
app/firefox_profile/: AlternateServices.txt  ExperimentStoreData.json  SiteSecurityServiceState.txt  addonStartup.json.lz4  addons.json  cert9.db  compatibility.ini  cookies.sqlite  extension-preferences.json  extensions.json  key4.db  lock  permissions.sqlite  pkcs11.txt  prefs.js  search.json.mozlz4  sessionstore.jsonlz4  shield-preference-experiments.json  storage.sqlite  times.json  (+1 more)
sh/: github_actions_unit_test.sh  prefect_agent_start.sh  prefect_agent_start__cloud.sh  prefect_agent_start__server.sh  prefect_cloud_deploy.sh  prefect_run_and_server_start.sh  prefect_worker_start__cloud.sh  prefect_worker_start__server.sh
(+423 files in other folders)
