[project]
name = "BrownieAtelierNewsCrawler"
version = "0.0.1"
requires-python = "~=3.10"
dependencies = [
    "prefect>=3.0.0",
    "Scrapy>=2.0.0",
    "scrapy-selenium>=0.0.7",
    "scrapy-splash>=0.9.0",
    "selenium>=4.0.0",
    "pymongo>=4.0.0",
    "pysolr>=3.9.0",
    "beautifulsoup4>=4.0.0",
    "bs4",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pyperclip>=1.0.0",
    "fasteners>=0.0.0",
    "openpyxl>=3.0.0",
    "python-decouple>=3.0.0",
    "azure-common",
    "azure-core",
    "azure-storage-blob",
    "azure-storage-file-share",
    "azure-identity",
    "azure-keyvault-secrets",
    "azure-mgmt-containerinstance",
    "azure-mgmt-core",
    "azure-mgmt-resource",
    "azure-storage-queue",
    "psutil",
    "slack-sdk>=3.0.0",
    "prefect-docker",
]

[dependency-groups]
dev = [
    "flake8",
    "autopep8",
    "black",
    "isort",
    "sphinx",
    "jupyter",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
